--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "endecrypt",
     "description": "Password based en-/decryption of arbitrary data with and for node.js.",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "author": "Daniel Wirtz <dcode@dcode.io>",
     "main": "./src/endecrypt.js",
     "bin": {
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "keypress": "~0.2",
-        "ascli": "latest"
+        "ascli": "latest",
+        "pson": "latest"
     }
 }
