--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "endecrypt",
     "description": "Password based en-/decryption of arbitrary data with and for node.js.",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "author": "Daniel Wirtz <dcode@dcode.io>",
     "main": "./src/endecrypt.js",
     "bin": {
-        "encrypt": "./bin/encrypt",
-        "decrypt": "./bin/decrypt"
+        "encrypt": "bin/encrypt",
+        "decrypt": "bin/decrypt",
+        "keystore": "bin/keystore"
     },
     "repository": {
         "type": "git",
