--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "endecrypt",
     "description": "Password based en-/decryption of arbitrary data with and for node.js.",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "author": "Daniel Wirtz <dcode@dcode.io>",
     "main": "./src/endecrypt.js",
     "bin": {
@@ -22,6 +22,6 @@
     "dependencies": {
         "keypress": "~0.2",
         "ascli": "latest",
-        "pson": "latest"
+        "pson": ">=0.6.4"
     }
 }
